--- a/src/public/index.html
+++ b/src/public/index.html
@@ -154,6 +154,20 @@
       <div class="header">
         <h1>💰 AI Agent Cost Monitor</h1>
         <p>Real-time cost tracking for your AI agents</p>
+        <p style="margin-top: 10px; font-size: 0.95rem">
+          <a
+            href="/privacy.html"
+            style="color: white; text-decoration: underline"
+            >Privacy Policy</a
+          >
+          |
+          <a
+            href="https://github.com/Mkiza/ai-agent-cost"
+            target="_blank"
+            style="color: white; text-decoration: underline"
+            >Open Source on GitHub</a
+          >
+        </p>
       </div>
 
       <div class="input-section">
